# box2d-py

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
src/box2d/: .#shape.py  __init__.py  body.py  build_cffi.py  shape.py  world.py
src/box2d-py/: build_cffi.py
src/box2d/box2d_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tests/: test_body.py  test_world.py
